# imdb_sentiment_analysis

./: .gitignore  MODEL_CARD.md  README.md  main.py  pyproject.toml  requirements.txt
data/: README.md
data/splits/: large_split.json  medium_split.json  small_split.json
demo/: predict_review.py
notebooks/: README.md
report/: README.md
results/: README.md  metrics_summary.csv
results/metrics/: large_naive_bayes_baseline_b.json  large_tfidf_logreg_main_b.json  medium_naive_bayes_baseline_b.json  medium_naive_bayes_baseline_c.json  medium_tfidf_logreg_main_b.json  medium_tfidf_logreg_main_c.json  small_naive_bayes_baseline_a.json  small_naive_bayes_baseline_b.json  small_naive_bayes_baseline_c.json  small_tfidf_logreg_main_a.json  small_tfidf_logreg_main_b.json  small_tfidf_logreg_main_c.json
scripts/: __init__.py  _bootstrap.py  compare_results.py  export_results_csv.py  generate_subset.py  make_figures.py  run_large.py  run_medium.py  run_small.py  train_model.py  visualise_model.py  visualise_results.py
src/: __init__.py  config.py  data_loader.py  evaluate.py  experiment.py  features.py  predict.py  preprocess.py  train_baseline.py  train_main_model.py
tests/: test_preprocess.py
