[project]
name = "imdb-sentiment-analysis"
version = "0.1.0"
description = "IU DLBAIPNLP01 – NLP Project - Sentiment Analysis on Movie Reviews"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "datasets>=2.18",
    "joblib>=1.3",
    "matplotlib>=3.8",
    "nltk>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
